# optdnn-edge

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  dataset_test.py  main.py  pyproject.toml  requirements.txt  setup.cfg
benchmarker_core/: node.py  protocol.py  utils.py
src/: main.py  pyproject.toml
src/tf_optimizer_core/: benchmarker_core.py  dataset_loader.py  node.py  protocol.py
tests/: test_dataset.py
tf_optimizer_core/: benchmarker_core.py  dataset_loader.py  node.py  protocol.py  utils.py
