[tool.poetry]
name = "tf-optimizer-core"
version = "0.1.0"
description = ""
authors = ["Luca Giovannesi <l.giovannesi@gmail.com>"]
readme = "README.md"
packages = [{include = "tf_optimizer_core"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
websockets = "^11.0.3"
tensorflow = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
