[tool.poetry]
name = "tf-optimizer-core"
version = "0.1.0"
description = ""
authors = ["Luca Giovannesi <l.giovannesi@gmail.com>"]
readme = "README.md"
packages = [{include = "src/tf_optimizer_core"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.3"
websockets = "^11.0.3"
requests = "^2.31.0"
pillow = "^9.5.0"
tflite-runtime = [
      { version = "^2.13.0", markers = "platform_machine == 'aarch64'" },
]
tensorflow = [
      { version = "^2.12.0", markers = "platform_machine == 'x86_64'" },
]
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
